// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BadgeGroup should render with many props assigned 1`] = `
<div
  className="BadgeGroup groupBadgeMargins groupMarginTop"
>
  <figure
    className="Badge groupBadge"
  >
    <svg />
    <figcaption
      className="label"
    >
      Lorem ipsum
    </figcaption>
  </figure>
</div>
`;

exports[`BadgeGroup should render with required props 1`] = `
<div
  className="BadgeGroup groupBadgeMargins"
>
  <figure
    className="Badge groupBadge"
  >
    <svg />
    <figcaption
      className="label"
    >
      Lorem ipsum
    </figcaption>
  </figure>
</div>
`;
